Add HTML tags to doctor data

--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -66,19 +66,20 @@
 
             // Leading heading
             .bold {
-                font-size: 16px;
+                @include font-size(16);
                 font-weight: 700;
             }
         }
 
         .arrow-large {
             top: calc(100% - 8px);
-            left: calc(50% - 40px) !important;
+            //left: calc(50% - 40px) !important;
             width: 56.6px;
             height: 55.7px;
             background-image: url('../images/speech-point.svg');
             @include icon-bg-center(cover);
             z-index: 5;
+            transform: translate3d(25px, 0, 0);
 
             &:before,
             &:after {
@@ -103,12 +104,40 @@
     }
 
     &-doctor {
+        max-width: 50vw;
+
+        ul {
+            //padding: 0 0 0 50px;
+            //margin: 30px 0 50px 0;
+
+            > li {
+                //@include font-style(false, 20px, false, false, 24px, -1px);
+                margin: 0 0 22px 0;
+                position: relative;
+                padding: 0 0 0 40px;
+
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: 5px;
+                    left: 0;
+                    width: 11px;
+                    height: 11px;
+                    background-color: $blue;
+                    border-radius: 50%;
+                }
+            }
+        }
+
         .close {
             position: absolute;
             top: 10px;
             right: 10px;
             cursor: pointer;
             opacity: 1 !important;
+        }
+
+        .arrow-large {
         }
     }
 }
