--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -340,9 +340,10 @@
 .highlight {
     transform-origin: 50% 50%;
     //animation: bounce .8s ease-in-out;
-    animation: pulse .5s ease-in-out;
+    //animation: wobble .5s ease-in-out;
     //animation: shake .8s ease-in-out;
     //animation: flash .8s ease-in-out;
+    animation: pulse .5s ease-in-out;
     animation-fill-mode: forwards;
     animation-iteration-count: 2;
 }
