--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -347,3 +347,24 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 2;
 }
+
+.heartbeat {
+    transform-origin: 50% 50%;
+    animation: heartBeat .5s ease-in-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 2;
+}
+
+.shake {
+    transform-origin: 50% 50%;
+    animation: shake .8s ease-in-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+
+.pulse {
+    transform-origin: 50% 50%;
+    animation: pulse .5s ease-in-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 2;
+}
