Procedure dropdown alignment

--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -31,8 +31,8 @@
     &.big {
         // Button added by BS select
         .dropdown-toggle {
-            height: 61px;
-            //line-height: 61px;
+            height: 60px;
+            line-height: 60px;
             padding: 0 45px 0 16px;
             width: 100%;
             border-radius: 10px;
