--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -69,6 +69,11 @@ select::-ms-expand {
 .select_half-width {
     justify-content: space-between;
 
+    label,
+    select {
+        width: 50%;
+    }
+
     label {
         text-align: left;
         color: $darkerGrey;
@@ -79,7 +84,6 @@ select::-ms-expand {
     }
 
     select {
-        flex: 0 0 50%;
         padding: 12px 100px 12px 16px;
         @include font-style('SofiaPro-Medium', 18px, false, false, 20px, -0.9px);
     }
