--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -84,6 +84,7 @@ select::-ms-expand {
     }
 
     select {
+        height: 45px;
         padding: 12px 100px 12px 16px;
         @include font-style('SofiaPro-Medium', 18px, false, false, 20px, -0.9px);
     }
@@ -91,7 +92,9 @@ select::-ms-expand {
     &:after {
         //font-size: 10px;
         //color: red;
-        content: url('../images/icons/chevron-down.svg');
+        content: '';
+        background-image: url('../images/icons/chevron-down.svg');
+        @include icon-bg-center(50%);
         position: absolute;
         top: 0;
         bottom: 0;
