--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -148,7 +148,7 @@ $col-spacing: 18px;
     //}
 
     .sort-bar {
-        min-height: 60px;
+        height: 60px;
         @include flex;
         justify-content: space-between;
         align-items: center;
