Fix issue with "highlight class"

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -337,7 +337,7 @@
 }
 
 // Pulse effect when highlighting page elements
-.highlight {
+.dr-highlight {
     transform-origin: 50% 50%;
     //animation: bounce .8s ease-in-out;
     //animation: wobble .5s ease-in-out;
