Fix issue with "highlight class"

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -57,6 +57,10 @@ select.big {
     background-color: $pink;
 }
 
+.bg-darkpink {
+    background-color: darken($pink, 20%);
+}
+
 .bg-black {
     background-color: $black;
 }
