--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -88,6 +88,7 @@
                 margin: 0;
                 color: $white;
                 @include font-size(20);
+                line-height: 1;
             }
         }
 
