--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -107,7 +107,7 @@ $col-spacing: 18px;
     .filter-section-child {
         position: relative;
         margin-bottom: 20px;
-        display: flex;
+        //display: flex;
         align-items: center;
 
         #input_postcode {
