--- a/resources/sass/components/basic/_bsSlider.scss
+++ b/resources/sass/components/basic/_bsSlider.scss
@@ -47,6 +47,7 @@
 .slider.slider-horizontal {
     width: 100%;
     height: 20px;
+    margin-bottom: 0 !important;
 }
 .slider.slider-horizontal .slider-track {
     height: 4px;
@@ -86,13 +87,22 @@
     width: 100%;
 }
 .slider.slider-horizontal .slider-tick-label-container {
+    position: absolute;
+    bottom: 100%;
     white-space: nowrap;
-    margin-top: 20px;
+    //margin-top: 20px;
 }
 .slider.slider-horizontal .slider-tick-label-container .slider-tick-label {
     padding-top: 4px;
     display: inline-block;
     text-align: center;
+    color: $teal;
+    @extend .SofiaPro-Medium;
+    @include font-size(14);
+
+    &.label-is-selection {
+        @extend .SofiaPro-Bold;
+    }
 }
 .slider.slider-horizontal .tooltip {
     -ms-transform: translateX(-50%);
