--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -30,14 +30,13 @@
 
     &.btn-s {
         font-size: 18px;
-
         height: 45px;
-        padding: 8px 30px;
+        line-height: 45px;
+        padding: 0 30px;
     }
 
     &.btn-m {
         font-size: 22px;
-
         padding: 10px 47px;
     }
 
@@ -326,7 +325,7 @@
             height: 40px;
             transition: $transition;
             position: relative;
-            padding: 5px 15px 5px 40px;
+            padding: 7px 15px 7px 40px;
             display: inline-block;
             text-align: left;
             max-width: 117px;
