--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -26,6 +26,10 @@
         &:active {
             background-color: #fff !important;
         }
+
+        &:focus {
+            outline: none !important;
+        }
     }
 
     &.big {
