--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -72,7 +72,9 @@ select::-ms-expand {
 
     label,
     select {
-        width: 50%;
+        @include media-breakpoint-up(md) {
+            width: 50%;
+        }
     }
 
     label {
@@ -86,18 +88,16 @@ select::-ms-expand {
 
     select {
         height: 45px;
-        padding: 12px 100px 12px 16px;
+        padding: 0 100px 0 16px;
         @include font-style('SofiaPro-Medium', 18px, false, false, 20px, -0.9px);
     }
 
     &:after {
-        //font-size: 10px;
-        //color: red;
         content: '';
         background-image: url('../images/icons/chevron-down.svg');
         @include icon-bg-center(50%);
         position: absolute;
-        top: 0;
+        //top: 0;
         bottom: 0;
         right: 0;
         width: 45px;
@@ -109,11 +109,10 @@ select::-ms-expand {
         pointer-events: none;
     }
 
-    + .helpParent {
-        .helpLink {
-            right: 240px;
-            top: 10px;
-        }
+    + .help-link {
+        transform: none;
+        top: initial !important;
+        bottom: 8px;
     }
 }
 
