--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -104,7 +104,9 @@
     }
 
     &-doctor {
-        max-width: 50vw;
+        @include media-breakpoint-up(lg) {
+            max-width: 50vw;
+        }
 
         ul {
             //padding: 0 0 0 50px;
