--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -32,7 +32,7 @@
     position: relative;
 
     .icon {
-        //@include flex;
+        //display: flex;
         //@include justify-content($value: center);
         margin-bottom: 25px;
         height: 120px;
