--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -160,7 +160,9 @@ $col-spacing: 18px;
     }
 
     .sort-bar {
-        height: 60px;
+        @include media-breakpoint-up(lg){
+            height: 60px;
+        }
         display: flex;
         justify-content: space-between;
         align-items: center;
