Add link to CQC data source

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -537,7 +537,7 @@
     }
 }
 
-.btn-link:hover {
-    color: $darkerGrey;
+.btn-link {
+    color: $darkerGrey !important;
     cursor: pointer;
 }
