NHS user rating popover. Link hover colour.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -538,6 +538,11 @@
 }
 
 .btn-link {
-    color: $darkerGrey !important;
+    color: $darkerGrey;
     cursor: pointer;
+
+    &:hover,
+    &:focus {
+        color: $blue;
+    }
 }
