--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -411,3 +411,17 @@ $col-spacing: 18px;
         pointer-events: none;
     }
 }
+
+// Ratings in popover of NHS user rating column
+.nhs-user-ratings {
+    li {
+        text-align: left;
+        display: flex;
+        justify-content: space-between;
+        line-height: 1.3;
+
+        span {
+            margin-left: auto;
+        }
+    }
+}
