Enquire button fix

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -322,7 +322,7 @@
             @include font-size(14);
             letter-spacing: -0.7px;
             line-height: 13px;
-            height: 40px;
+            //height: 40px;
             transition: $transition;
             position: relative;
             padding: 7px 15px 7px 40px;
