--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -337,7 +337,10 @@ $col-spacing: 18px;
     }
 
 .result-item-section-2__child {
-        flex: 1 auto ;
+        flex: 1 auto;
+        @include media-breakpoint-up(md){
+            flex: 1;
+        }
         @include flex-center;
         font-size: 16px;
         font-weight: 400;
