Item tooltip top position fix

--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -49,6 +49,15 @@
                 background-color: #fff;
             }
         }
+
+        // Move arrow if popover below trigger
+        &.bs-popover-top {
+            .arrow {
+                top: calc(100% - 8px);
+                bottom: auto;
+                transform: rotate(180deg) scaleX(-1);
+            }
+        }
     }
 
     &-large {
