Hide/show corporate content area with generic toggle function.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -41,6 +41,7 @@
 
 // PAGE SECTION
 @import 'pages/pagesections/howSection';
+@import 'pages/pagesections/corporateContent';
 
 // TEMPLATE FILES
 @import 'layout/header';
