--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -133,7 +133,7 @@ $col-spacing: 18px;
             &.radius {
                 //width: 60%;
                 .col-inner {
-                    @include media-breakpoint-up(md){
+                    @include media-breakpoint-up(md) {
                         padding-left: 153px;
 
                         label {
@@ -151,7 +151,7 @@ $col-spacing: 18px;
     }
 
     .sort-bar {
-        @include media-breakpoint-up(lg){
+        @include media-breakpoint-up(lg) {
             height: 60px;
         }
         display: flex;
@@ -290,7 +290,6 @@ $col-spacing: 18px;
     }
 
 
-
     .result-item-menu {
         display: flex;
         width: 100%;
@@ -335,8 +334,7 @@ $col-spacing: 18px;
 
     .result-item-section-1,
     .result-item-section-2,
-    .result-item-section-3
-    {
+    .result-item-section-3 {
         display: flex;
         @include responsive-columns;
     }
@@ -349,9 +347,9 @@ $col-spacing: 18px;
         flex-direction: column;
     }
 
-.result-item-section-2__child {
+    .result-item-section-2__child {
         flex: 1 auto;
-        @include media-breakpoint-up(md){
+        @include media-breakpoint-up(md) {
             flex: 1;
         }
         @include flex-center;
@@ -479,6 +477,27 @@ $col-spacing: 18px;
 
         span {
             margin-left: auto;
+        }
+    }
+}
+
+// CQC popover
+.cqc-table {
+    .cqc-row {
+        line-height: 30px;
+        border-bottom: 1px solid $borderGrey;
+    }
+
+    .cqc-colour {
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        display: inline-block;
+
+
+        &.green {
+            margin-left: 10px;
+            background-color: #458f00;
         }
     }
 }
