--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -473,10 +473,10 @@ $col-spacing: 18px;
         text-align: left;
         display: flex;
         justify-content: space-between;
-        line-height: 1.3;
+        line-height: 1.7;
 
         span {
-            margin-left: auto;
+            margin-left: 50px;
         }
     }
 }
@@ -485,7 +485,10 @@ $col-spacing: 18px;
 .cqc-table {
     .cqc-row {
         line-height: 30px;
-        border-bottom: 1px solid $borderGrey;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid $borderGrey;
+        }
     }
 
     .cqc-colour {
