CQC popover finished statically.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -77,6 +77,18 @@ select.big {
     background-color: $greylight;
 }
 
+.bg-cqc-green {
+    background-color: $cqcGreen;
+}
+
+.bg-cqc-amber {
+    background-color: $cqcAmber;
+}
+
+.bg-cqc-red {
+    background-color: $cqcRed;
+}
+
 .col-teal {
     color: $teal;
 }
