--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -48,6 +48,11 @@ $hotpink: #ed0373;
 $caretBlack: #040202;
 $bannerMaskGreen: #19a2a1;
 
+// CQC RAG rating colours
+$cqcGreen: #458f00;
+$cqcAmber: #FF9900;
+$cqcRed: #BF1000;
+
 // Borders
 $borderVideo: #707070;
 $borderGrey: #d7d7d7;
@@ -76,6 +81,7 @@ $popover-arrow-width: 12px;
 $popover-arrow-height: 9px;
 $popover-arrow-outer-color: transparent;
 $popover-arrow-color: #fff;
+$popover-max-width: 500px;
 
 // Modal
 $modal-inner-padding: 0;
