--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -3,14 +3,15 @@
 
 // New set of styles based on RC UI kit
 .btn {
+    @include font-size(14);
+    @include transition(0.3s);
+    @extend .SofiaPro-Medium;
     border-radius: 100px;
     color: $white;
-    @include font-size(14);
     padding: 14px 26px;
     background-size: 300% 100% !important;
     background-position: left;
     position: relative;
-    @include transition(0.3s);
     text-align: left;
     cursor: pointer;
 
