--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -34,7 +34,7 @@
             li {
                 position: relative;
 
-                a {
+                > a {
                     display: inline-block;
                     color: $white;
                     padding: 0 12px;
