--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -5,7 +5,7 @@
 .btn {
     @include font-size(14);
     @include transition(0.3s);
-    @extend .SofiaPro-Medium;
+    //@extend .SofiaPro-Medium;
     border-radius: 100px;
     color: $white;
     padding: 14px 26px;
