Added tabs and panes to corporate area.

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -10,6 +10,11 @@
     width: calc(86% - 134px);
     //@extend .bg-teal;
     padding-left: 8px;
+    padding-top: 18px;
+
+    .tab-pane {
+        padding-top: 13px;
+    }
 }
 
 .corporate-content-section-3 {
