Reduce padding on CTA buttons

--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -7,6 +7,7 @@
             width: 100%;
             text-align: left;
             padding-right: 90px;
+            @include font-size(24);
 
             &:after {
                 content: " ";
