--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,3 @@
-:root {
-    // Width/height of the range thumb
-    --range-handle-size: 22px;
-}
-
 // Transition
 $transition: 0.3s all ease;
 
@@ -42,7 +37,6 @@ $lightestGrey: #1b1b1b;
 $darkerGrey: #1c1c1c;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
-$sectionBeige: #ececec;
 $darkBlue: #1b71f3;
 $hotpink: #ed0373;
 $caretBlack: #040202;
@@ -155,4 +149,13 @@ $range-track-height: 4px !default;
 $range-label-color: $shade-10 !default;
 $range-label-width: 60px !default;
 
+// Navs and tabs
 
+$nav-link-padding-y: 0.25rem;
+$nav-link-padding-x: 0;
+$nav-tabs-border-width: 0;
+$nav-tabs-border-radius: 0;
+$nav-tabs-link-hover-border-color: $teal;
+
+// Borders
+$border-radius: 9px;
