--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -2,7 +2,7 @@
 
     //=======================WHY CHOOSE SECTION=======================
     .why-use-parent {
-        background: $sectionBeige;
+        background: $lighterGrey;
 
         .why-use-content {
             padding: 70px 0 60px;
