--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -1,9 +1,9 @@
 .corporate-content {
-    display: none;
+    //display: none;
 }
 
 .corporate-content-section-1 {
-    width: 134px;
+    width: $hospital-image-width;
 }
 
 .corporate-content-section-2 {
