Profile and treatment tabs complete

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -42,6 +42,7 @@ $darkBlue: #1b71f3;
 $hotpink: #ed0373;
 $caretBlack: #040202;
 $bannerMaskGreen: #19a2a1;
+$corporateContentGreen: #026867;
 
 // CQC RAG rating colours
 $cqcGreen: #458f00;
