--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -14,6 +14,65 @@ ol {
     padding-left: 0;
     list-style: none;
 }
+ul.blue-dot {
+    //padding: 0 0 0 50px;
+    margin-bottom: 30px;
+
+    > li {
+        @include font-style(false, 14px, false, false, 24px, -1px);
+        //margin: 0 0 12px 0;
+        position: relative;
+        padding: 0 0 0 30px;
+        text-align: left;
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 5px;
+            left: 0;
+            width: 11px;
+            height: 11px;
+            background-color: $blue;
+            border-radius: 50%;
+        }
+    }
+
+    &.blue-dot_small {
+
+        li {
+            color: $corporateContentGreen;
+
+            &:before {
+                width: 9px;
+                height: 9px;
+                background-color: $corporateContentGreen;
+            }
+        }
+    }
+}
+
+ul.blue-disc {
+    //padding: 0 0 0 50px;
+    margin: 30px 0 50px 0;
+
+    > li {
+        @include font-style(false, 20px, false, false, 24px, -1px);
+        margin: 0 0 22px 0;
+        position: relative;
+        padding: 0 0 0 40px;
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 5px;
+            left: 0;
+            width: 11px;
+            height: 11px;
+            background-color: $blue;
+            border-radius: 50%;
+        }
+    }
+}
 
 input[type=submit] {
     padding: 0;
