--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -1,5 +1,5 @@
 .corporate-content {
-    display: none;
+    //display: none;
 }
 
 .corporate-content-section-1 {
@@ -31,8 +31,17 @@
         }
     }
 
-    .tab-pane {
+    .tab-pane,
+    .media-pane {
         padding-top: 13px;
+    }
+
+    .media-pane {
+
+    }
+
+    .special-offers-tab {
+        padding: 14px 33px 17px;
     }
 }
 
