Corporate video working with Youtube SVG

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -37,7 +37,12 @@
     }
 
     .media-pane {
-
+        .video-wrapper {
+            .player-button {
+                width: 50%;
+                max-width: 60px;
+            }
+        }
     }
 
     .special-offers-tab {
