--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -248,3 +248,40 @@ select.big {
 .close {
     opacity: 1 !important;
 }
+
+// Video sections
+.video-wrapper {
+    position: relative;
+    @include aspect-ratio(497px, 349px);
+    overflow: hidden;
+
+    video {
+        width: 140% !important;
+    }
+
+    .player-button {
+        @include v-h-c;
+        z-index: 5;
+        cursor: pointer;
+        transition: $transition;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+}
+
+.home-page {
+    .video-wrapper {
+        border: 1px solid $borderVideo;
+        border-radius: 15px;
+
+        .player-button {
+            background-image: url(../images/player_button.png);
+            background-size: cover;
+            height: 78px;
+            width: 78px;
+        }
+    }
+}
