--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -1,5 +1,7 @@
-.corporate-content {
-    display: none;
+.results-page {
+    .corporate-content {
+        display: none;
+    }
 }
 
 .corporate-content-section-1 {
@@ -13,7 +15,7 @@
     padding-top: 18px;
 
     .nav-tabs {
-        box-shadow: inset 0px -2px 0px 0px rgba(236,236,236,1);
+        box-shadow: inset 0px -2px 0px 0px rgba(236, 236, 236, 1);
 
         li { // nav-item
             margin-right: 25px;
@@ -53,3 +55,4 @@
 .corporate-content-section-3 {
     width: 14%;
 }
+
