CQC outstanding star added.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -166,7 +166,10 @@ select.big {
  }
 
 // CQC rating colours
-.bg-outstanding,
+.bg-outstanding {
+    background: $goldStar;
+}
+
 .bg-good {
     background-color: $cqcGreen;
 }
