--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,7 @@ $pink: #ed0373;
 $grey: #363636;
 $white: #ffffff;
 $greylight: #F6F6F6;
+$goldStar: #FAC917;
 
 //Main Template colours
 $darkerWhite: #f5f5f5;
