--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -509,4 +509,13 @@ $col-spacing: 18px;
             width: 100%;
         }
     }
+
+    .bg-cqc-star {
+        background: url('../images/icons/star.svg');
+        @include icon-bg-center(cover);
+        width: 12px;
+        height: 12px;
+        display: inline-block;
+        margin-left: 10px;
+    }
 }
