--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1,5 +1,14 @@
-html {
-    //scroll-behavior: smooth;
+.cookie-page,
+.privacy-page,
+.terms-and-conditions-page,
+.faqs-page,
+.your-rights-page,
+.about-us-page,
+.blog-page,
+.blog-item-page {
+    main {
+        padding-top: 40px;
+    }
 }
 
 // remove focus ring
